--- a/Projet.tex
+++ b/Projet.tex
@@ -293,11 +293,51 @@ incomplètes nous allons remplacer les Na par la moyenne.
 \NormalTok{data }\OtherTok{\textless{}{-}} \FunctionTok{prop.table}\NormalTok{(}\FunctionTok{table}\NormalTok{(df\_general\_data[}\StringTok{\textquotesingle{}Attrition\textquotesingle{}}\NormalTok{]))}\SpecialCharTok{*}\DecValTok{100}   \CommentTok{\#affiche porucentage }
 
 
-\FunctionTok{barplot}\NormalTok{ (data , }\AttributeTok{space =}\FloatTok{1.0}\NormalTok{,}\AttributeTok{main=}\StringTok{"Attrition"}\NormalTok{)}
+\FunctionTok{barplot}\NormalTok{ (data , }\AttributeTok{space =}\FloatTok{1.0}\NormalTok{,}
+         \AttributeTok{main=}\StringTok{"Attrition"}\NormalTok{,  }\CommentTok{\#Nom graph}
+         \AttributeTok{ylim=}\FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{100}\NormalTok{))     }\CommentTok{\#échelle des ordonnées}
 \end{Highlighting}
 \end{Shaded}
 
 \includegraphics{Projet_files/figure-latex/unnamed-chunk-9-1.pdf}
+\#Analyse Salaire
+
+\#Répartitions des salaires
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{boxplot}\NormalTok{(df\_general\_data}\SpecialCharTok{$}\NormalTok{MonthlyIncome,}
+        \AttributeTok{main =} \StringTok{\textquotesingle{}Box Plot: Salaire\textquotesingle{}}\NormalTok{,}
+        \AttributeTok{xlab=}\StringTok{"salaire mensuel ($)"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{Projet_files/figure-latex/unnamed-chunk-10-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{boxplot}\NormalTok{(df\_general\_data}\SpecialCharTok{$}\NormalTok{MonthlyIncome }\SpecialCharTok{\textasciitilde{}}\NormalTok{ df\_general\_data}\SpecialCharTok{$}\NormalTok{Department, }
+        \AttributeTok{main=}\StringTok{\textquotesingle{}salire en fonction du déârtement\textquotesingle{}}\NormalTok{,}
+        \AttributeTok{ylab=}\StringTok{"salaire mensuel ($)"}\NormalTok{,}
+        \AttributeTok{xlab=}\StringTok{"Département"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{Projet_files/figure-latex/unnamed-chunk-10-2.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{boxplot}\NormalTok{(df\_general\_data}\SpecialCharTok{$}\NormalTok{MonthlyIncome }\SpecialCharTok{\textasciitilde{}}\NormalTok{ df\_general\_data}\SpecialCharTok{$}\NormalTok{JobRole,}
+        \AttributeTok{las=}\DecValTok{2}\NormalTok{,   }\CommentTok{\#légende à la verticale}
+        \AttributeTok{main=}\StringTok{\textquotesingle{}Salaire en fonction du poste\textquotesingle{}}\NormalTok{,}
+        \AttributeTok{ylab=}\StringTok{"salaire mensuel ($)"}\NormalTok{,}
+        \AttributeTok{xlab=}\StringTok{"Postes"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{Projet_files/figure-latex/unnamed-chunk-10-3.pdf}
+
+\#\#Revenue en fonction du post
 
 The preview shows you a rendered HTML copy of the contents of the
 editor. Consequently, unlike \emph{Knit}, \emph{Preview} does not run
